--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,13 @@
-name: CI
+name: 'Deploy'
 on:
   push:
     branches: [ main ]
+
 jobs:
-  # test:
-  #   ...
   deploy:
     name: "Deploy"
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Configure SSH
         run: |
@@ -19,13 +18,13 @@ jobs:
           Host staging
             HostName $SSH_HOST
             User $SSH_USER
-            IdentityFile ~/.ssh/staging.key
+            IdentityFile ~/.ssh/app.key
             StrictHostKeyChecking no
           END
         env:
-          SSH_USER: ${{ secrets.STAGING_SSH_USER }}
-          SSH_KEY: ${{ secrets.STAGING_SSH_KEY }}
-          SSH_HOST: ${{ secrets.STAGING_SSH_HOST }}
+          SSH_USER: ${{ secrets.SSH_USER }}
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
 
-      - name: Run Test
+      - name: Test
         run: ssh app 'touch /home/git.txt'
